--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.9.24
 click==8.1.3
 exceptiongroup==1.0.4
 fastapi==0.88.0
+flake8==6.0.0
 h11==0.14.0
 httpcore==0.16.2
 httpx==0.23.1
@@ -12,11 +13,15 @@ idna==3.4
 iniconfig==1.1.1
 Mako==1.2.4
 MarkupSafe==2.1.1
+mccabe==0.7.0
 packaging==21.3
 pluggy==1.0.0
+pycodestyle==2.10.0
 pydantic==1.10.2
+pyflakes==3.0.1
 pyparsing==3.0.9
 pytest==7.2.0
+python-dotenv==0.21.0
 rfc3986==1.5.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
