--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 packaging==21.3
 pluggy==1.0.0
+psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pydantic==1.10.2
 pyflakes==3.0.1
